--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
     "typescript": "^2.3.2"
   }
 }
