--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc",
-    "start": "tsc -w",
-    "server": "lite-server --baseDir=app"
+    "watch": "tsc -w",
+    "server": "lite-server --baseDir=app",
+    "start": "concurrently \"npm run watch\" \"npm run server\""
   },
   "author": "diego montania",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
     "@types/jquery": "^3.5.5",
+    "concurrently": "^5.3.0",
     "lite-server": "^2.6.1",
     "typescript": "^2.3.2"
   }
